crates/decorous-backend/src/dom_render/snapshots/decorous_backend__dom_render__tests__basic_render_works.snap
---
source: crates/decorous-backend/src/dom_render/mod.rs
expression: "String::from_utf8(out).unwrap()"
---
const dirty = new Uint8Array(new ArrayBuffer(1));
function create_main_block(target, anchor) {
function mount(target, newNode, anchor) {
target.insertBefore(newNode, anchor || null);
}
const e0 = document.createElement("p");
const e1 = document.createTextNode(`${ctx[0]}hello`);
const e2 = document.createElement("button");
e2.textContent = "Click me";
e2.addEventListener("click", ctx[1])

mount(target, e0, anchor);
e0.appendChild(e1);
mount(target, e2, anchor);

return {
u(dirty) {
if (dirty[0] & 1) e1.data = `${ctx[0]}hello`;

},
d() {
e0.parentNode.removeChild(e0);
e2.parentNode.removeChild(e2);

}
};
}
function __init_ctx() {
let x = 3;
function remake_x() { __schedule_update(0, x = 44); }
return [x,remake_x];
}
const ctx = __init_ctx();
const fragment = create_main_block(document.getElementById("app"));
let updating = false;
function __schedule_update(ctx_idx, val) {
ctx[ctx_idx] = val;
dirty[Math.max(Math.ceil(ctx_idx / 8) - 1, 0)] |= 1 << (ctx_idx % 8);
if (updating) return;
updating = true;
Promise.resolve().then(() => {
fragment.u(dirty);
updating = false;
dirty.fill(0);
});
}

