crates/decorous-backend/src/dom_render/snapshots/decorous_backend__dom_render__tests__can_render_reactive_blocks.snap
---
source: crates/decorous-backend/src/dom_render/mod.rs
expression: "String::from_utf8(out).unwrap()"
---
const dirty = new Uint8Array(new ArrayBuffer(1));
function create_main_block(target, anchor) {
function mount(target, newNode, anchor) {
target.insertBefore(newNode, anchor || null);
}
const e0 = document.createElement("input");
e0.value = ctx[0];
e0.addEventListener("input", ctx[3]);
mount(target, e0, anchor);
return {
u(dirty) {
if (dirty[0] & 3) { ctx[2]() }
if (dirty[0] & 1) e0.value = ctx[0];
},
d() {
e0.parentNode.removeChild(e0);
}
};
}
function __init_ctx() {
let x = 0;
let y = 0;
y = x + 1;
let __binding3 = (ev) => __schedule_update(0, x = ev.target.value);
let __reactive2 = () => { __schedule_update(1, y = x + 1); };
return [x,y,__reactive2,__binding3];
}
const ctx = __init_ctx();
const fragment = create_main_block(document.getElementById("test"));
let updating = false;
function __schedule_update(ctx_idx, val) {
ctx[ctx_idx] = val;
dirty[Math.max(Math.ceil(ctx_idx / 8) - 1, 0)] |= 1 << (ctx_idx % 8);
if (updating) return;
updating = true;
Promise.resolve().then(() => {
fragment.u(dirty);
updating = false;
dirty.fill(0);
});
}

