crates/decorous-backend/src/dom_render/snapshots/decorous_backend__dom_render__tests__everything_in_script_tag_is_in_context_init.snap
---
source: crates/decorous-backend/src/dom_render/mod.rs
expression: "String::from_utf8(out).unwrap()"
---
const dirty = new Uint8Array(new ArrayBuffer(1));
function create_main_block(target, anchor) {
function mount(target, newNode, anchor) {
target.insertBefore(newNode, anchor || null);
}


return {
u(dirty) {

},
d() {

}
};
}
function __init_ctx() {
let x = 3;
x = 4;
return [x];
}
const ctx = __init_ctx();
const fragment = create_main_block(document.getElementById("app"));
let updating = false;
function __schedule_update(ctx_idx, val) {
ctx[ctx_idx] = val;
dirty[Math.max(Math.ceil(ctx_idx / 8) - 1, 0)] |= 1 << (ctx_idx % 8);
if (updating) return;
updating = true;
Promise.resolve().then(() => {
fragment.u(dirty);
updating = false;
dirty.fill(0);
});
}

