crates/decorous-backend/src/dom_render/snapshots/decorous_backend__dom_render__tests__mustaches_with_no_reactives_are_not_updated.snap
---
source: crates/decorous-backend/src/dom_render/mod.rs
expression: "String::from_utf8(out).unwrap()"
---
const dirty = new Uint8Array(new ArrayBuffer(0));
function create_main_block(target, anchor) {
function mount(target, newNode, anchor) {
target.insertBefore(newNode, anchor || null);
}
const e0 = document.createTextNode(1 + 1);
const e1 = document.createTextNode(" ");
const e2 = document.createElement("p");
e2.textContent = "Woah";
e2.setAttribute("class", 11);
mount(target, e0, anchor);
mount(target, e1, anchor);
mount(target, e2, anchor);
return {
u(dirty) {
},
d() {
e0.parentNode.removeChild(e0);
e1.parentNode.removeChild(e1);
e2.parentNode.removeChild(e2);
}
};
}
function __init_ctx() {

return [];
}
const ctx = __init_ctx();
const fragment = create_main_block(document.getElementById("app"));
let updating = false;
function __schedule_update(ctx_idx, val) {
ctx[ctx_idx] = val;
dirty[Math.max(Math.ceil(ctx_idx / 8) - 1, 0)] |= 1 << (ctx_idx % 8);
if (updating) return;
updating = true;
Promise.resolve().then(() => {
fragment.u(dirty);
updating = false;
dirty.fill(0);
});
}

